# dwrt

./: .gitignore  Cargo.toml  DWRT_ENGINEERING_TODOS.md  DWRT_PROJECT_BOUNDARY.md  LICENSE-APACHE  LICENSE-MIT  README.md  RUST_DEADWORKS_REWRITE_PLAN.md
crates/: README.md
crates/dwrt-bench/: Cargo.toml
crates/dwrt-core/: Cargo.toml
crates/dwrt-engine/: Cargo.toml
crates/dwrt-entity/: Cargo.toml
crates/dwrt-ffi/: Cargo.toml
crates/dwrt-hooks/: Cargo.toml
crates/dwrt-memory/: Cargo.toml
crates/dwrt-runtime/: Cargo.toml
crates/dwrt-trace/: Cargo.toml
native/: README.md
native/dwrt-host/: bootstrap_smoke.cpp  dwrt_friendly_fire.cpp  dwrt_friendly_fire.hpp  dwrt_hook_backend.cpp  dwrt_hook_backend.hpp  dwrt_host.cpp  dwrt_host_api.hpp  dwrt_host_testpoints.cpp  dwrt_host_testpoints.hpp  dwrt_probe_manifest.cpp  dwrt_probe_manifest.hpp  dwrt_signature_scanner.cpp  dwrt_signature_scanner.hpp  dwrt_target_probe.cpp  dwrt_target_probe.hpp  dwrt_walker_patrol.cpp  dwrt_walker_patrol.hpp  inject_smoke.cpp  smoke.cpp  testpoints_smoke.cpp
native/dwrt-shim/: dwrt_shadow_shim.cpp  dwrt_shadow_shim.hpp  smoke.cpp
research/benchmarks/: README.md  client-shadow-smoke-20260530.md  client-shadow-smoke-attempt-20260530-invalid.md  (+7 more)
scripts/: bench-dwrt-runtime.ps1  profile-dwrt-command.ps1  smoke-deadworks-shadow-server.ps1  smoke-dwrt-host.ps1  smoke-dwrt-live-server.ps1  smoke-dwrt-runtime.ps1  smoke-dwrt-shim.ps1  start-dwrt-ffa-ingame-test-session.ps1  start-dwrt-manual-probe-session.ps1  test-dwrt-ffa-readiness.ps1  test-dwrt-native-stack.ps1
(+72 files in other folders)
