[workspace]
members = [
    "crates/dwrt-core",
    "crates/dwrt-engine",
    "crates/dwrt-entity",
    "crates/dwrt-ffi",
    "crates/dwrt-hooks",
    "crates/dwrt-memory",
    "crates/dwrt-runtime",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = false
